--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,7 @@ header {
 
 .get-location-button:hover {
     box-shadow: inset 9.91px 9.91px 15px #D9DADE, inset -9.91px -9.91px 15px #FFFFFF;
+    cursor: pointer
 }
 
 .get-location-button:focus {
@@ -111,6 +112,7 @@ header {
 
 .celius-to-farenheit:hover {
     box-shadow: inset 9.91px 9.91px 15px #D9DADE, inset -9.91px -9.91px 15px #FFFFFF;
+    cursor: pointer;
 }
 
 .celius-to-farenheit:focus {
@@ -178,15 +180,16 @@ header {
     background: linear-gradient(134.17deg, #EEF0F5 4.98%, #E6E9EF 94.88%);
     box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8), 10px 10px 24px rgba(166, 180, 200, 0.7);
     border-radius: 1rem;
-    width: 6vw;
-    height: 7vw;
+    width: 8vw;
+    height: auto;
     text-align: center;
     margin-left: 1vw;
     margin-right: 1vw;
 }
 
 .individual-forecast img {
-    width: 3rem;
+    width: 5vh;
+    opacity: 0.7;
 }
 
 footer {
@@ -199,4 +202,13 @@ footer {
 footer p {
     margin-top: 2vw;
     font-size: 1.2rem;
+}
+
+footer a {
+    color: black;
+    text-decoration: none;
+}
+
+footer a:hover {
+    opacity: 0.7;
 }
