--- a/src/style.css
+++ b/src/style.css
@@ -181,7 +181,8 @@ header .search-location input {
 }
 
 .individual-forecast img {
-  width: 5vh;
+  height: 5vh;
+  width: auto;
   opacity: 0.7;
 }
 
