--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,24 @@
   border-radius: 1rem;
 }
 
+.loading-screen {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+  top: -5vw;
+  bottom: 0;
+  z-index: 1;
+}
+
+.loading-screen h2 {
+  text-align: center;
+  padding-top: 30vh;
+}
+
 header {
   display: flex;
   justify-content: space-between;
